@@ -7,6 +7,7 @@ import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -133,9 +134,9 @@ public class S3ImageService implements ImageStorage {
 	private String getKeyFromImageAddress(String imageAddress) {
 		try {
 			URL url = new URL(imageAddress);
-			String decodingKey = URLDecoder.decode(url.getPath(), "UTF-8");
+			String decodingKey = URLDecoder.decode(url.getPath(), StandardCharsets.UTF_8);
 			return decodingKey.substring(1);
-		} catch (MalformedURLException | UnsupportedEncodingException e) {
+		} catch (MalformedURLException e) {
 			throw new S3BusinessException(S3ErrorCode.IO_EXCEPTION_ON_IMAGE_DELETE);
 		}
 	}
